name:                idbbs-db
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/idbbs-db#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Models
                     , Api
                     , Api.Article
                     , Config
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , time
                     , monad-logger
                     , bytestring
                     , transformers
                     , wai
                     , wai-extra
                     , wrap
                     , servant-server
                     , aeson
                     , aeson-casing
                     , persistent
                     , persistent-template
                     , persistent-postgresql
  default-language:    Haskell2010

executable idbbs-db-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , safe
                     , mtl
                     , either
                     , aeson
                     , warp
                     , servant-server
                     , persistent-postgresql
                     , idbbs-db
  default-language:    Haskell2010

test-suite idbbs-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , idbbs-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/idbbs-db
